--- a/index.html
+++ b/index.html
@@ -181,8 +181,8 @@
   //    raining boolean
   //
   // 2) Coloque aqui:
-  const SUPABASE_URL = "COLE_AQUI_SUA_SUPABASE_URL";
-  const SUPABASE_ANON_KEY = "COLE_AQUI_SUA_SUPABASE_ANON_KEY";
+  const SUPABASE_URL = "https://lnrbpiklzymblpyrobwx.supabase.co";
+  const SUPABASE_ANON_KEY = "sb_publishable_KXVbF3c7RGFXVTtfYmrzzg_dMK04Q9q";
 
   const TABLE = "reports";
   const TTL_HOURS = 3;            // validade total
@@ -507,4 +507,5 @@
   getLocation();
 </script>
 </body>
+
 </html>
